kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-service
  template:
    metadata:
      labels:
        app: golang-service
    spec:
      containers:
      - name: golang-service
        image: minhthuong031103/golang-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
