kubernetes/cassandra-reaper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandra-reaper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cassandra-reaper
  template:
    metadata:
      labels:
        app: cassandra-reaper
    spec:
      containers:
        - name: cassandra-reaper
          image: thelastpickle/cassandra-reaper:latest
          ports:
            - containerPort: 8080 # Reaper UI port
---
apiVersion: v1
kind: Service
metadata:
  name: cassandra-reaper
spec:
  type: ClusterIP
  selector:
    app: cassandra-reaper
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
