kubernetes/customer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
        - name: customer-service
          image: bvquoc/customer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50050
            - containerPort: 9090
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer-service
  ports:
    - name: grpc
      protocol: TCP
      port: 50050
      targetPort: 50050
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort
