kubernetes/fileupload-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileupload-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fileupload-service
  template:
    metadata:
      labels:
        app: fileupload-service
    spec:
      containers:
        - name: fileupload-service
          # image: minhthuong031103/fileupload-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50054
            - containerPort: 9090
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: fileupload-service
spec:
  selector:
    app: fileupload-service
  ports:
    - name: grpc
      protocol: TCP
      port: 50054
      targetPort: 50054
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort
