kubernetes/grpc-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-gateway
  template:
    metadata:
      labels:
        app: grpc-gateway
    spec:
      containers:
      - name: grpc-gateway
        image: minhthuong031103/grpc-gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: grpc-gateway
spec:
  selector:
    app: grpc-gateway
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
