kubernetes/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: minhthuong031103/order-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
            - containerPort: 9090
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort
