kubernetes/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: bvquoc/product:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50052
            - containerPort: 9090
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  ports:
    - name: grpc
      protocol: TCP
      port: 50052
      targetPort: 50052
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort
