kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-service
spec:
  selector:
    app: golang-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
