kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    # http:
    #   paths:
    #   - path: /api
    #     pathType: Prefix
    #     backend:
    #       service:
    #         name: api-gateway
    #         port:
    #           number: 8080
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpc-gateway
            port:
              number: 8080
